# ECFW

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
benchmark/: CMakeLists.txt  benchmarks.cpp
benchmark/src/: benchmark.cpp
cmake/: ECFWConfig.cmake.in
ecfw/: CMakeLists.txt  ecfw.cpp  ecfw.h
include/ecfw/: ecfw.hpp  entity.hpp  view.hpp  world.hpp
include/ecfw/aliases/: bitset2.hpp  hana.hpp
include/ecfw/component/: mask.hpp  storage.hpp  traits.hpp  vector.hpp
include/ecfw/core/: view.hpp  world.hpp
include/ecfw/detail/: buffer.hpp  dword.hpp  entity.hpp  sparse_set.hpp  type_index.hpp  type_list.hpp  type_traits.hpp
include/ecfw/entity/: entity.hpp  events.hpp  group.hpp  index.hpp  manager.hpp  traits.hpp  view.hpp
include/ecfw/event/: dispatcher.hpp  signal.hpp
include/ecfw/fwd/: bitset.hpp  index.hpp  tag.hpp  tuple.hpp  unsigned.hpp  vector.hpp  view.hpp  world.hpp
include/ecfw/meta/: type_list.hpp  type_traits.hpp
include/ecfw/util/: is_iterator.hpp  sparse_set.hpp  type_list.hpp
include/ecfw/utility/: algorithm.hpp  index_of.hpp  noncopyable.hpp  sparse_set.hpp  traits.hpp
test/: CMakeLists.txt  entity_manager.cpp  entity_traits.cpp  type_traits.cpp
test/ecfw/: default_storage.cpp  entity_group.cpp  entity_manager.cpp  event_dispatcher.cpp  type_list.cpp  type_traits.cpp
test/src/: buffer.cpp  counter.hpp  dword.cpp  entity.cpp  integers.cpp  sparse_set.cpp  type_index.cpp  type_list.cpp  type_traits.cpp  world.cpp
test/src/component/: storage.cpp  vector.cpp
test/src/detail/: buffer.cpp  sparse_set.cpp  type_index.cpp  type_traits.cpp
test/src/ecfw/component/: mask.cpp  traits.cpp  vector.cpp
test/src/ecfw/entity/: entity.cpp  group.cpp
test/src/ecfw/utility/: sparse_set.cpp  traits.cpp
test/src/entity/: entity.cpp  index.cpp  traits.cpp
test/src/util/: is_iterator.cpp  sparse_set.cpp
test/src/view/: capacity.cpp  get.cpp  iterate.cpp  lookup.cpp
test/src/world/: assign.cpp  capacity.cpp  clone.cpp  contains.cpp  create.cpp  destroy.cpp  get.cpp  has.cpp  orphan.cpp  recycle.cpp  remove.cpp  stats.cpp  valid.cpp  view.cpp
